# Birds-detection

./: Birds UI.ipynb  README.md  birds.py  pyproject.toml  requirements.txt
.github/workflows/: check.yml
birds/: __init__.py  birds.py
