[project]
name = "birds"
version = "0.1.0"
description = "A script for counting flying birds, captured in a photo."
readme = "README.md"
requires-python = ">=3.10.*"
keywords = ["bird", "detection", "segmentation", "computevision", "classification"]
authors = [{name = "Łukasz Bednarski"}]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Programming Language :: Python :: 3.10"
  "Programming Language :: Python :: 3.11"
  "Programming Language :: Python :: 3.12"
]
dependencies = [
  "opencv-python==4.8.0.76",
  "matplotlib==3.9.2",
  "numpy==1.26.4",
  "ipython==8.26.0",
  "ipywidgets==8.1.3",
  "jupyterlab==4.2.4",
]

[tool.setuptools.packages.find]
include = ["birds/*"]

[project.optional-dependencies]
dev = ["mypy", "black", "isort", "ruff"]
test = ["pytest"]

[tool.black]
line-length = 100
skip-string-normalization = true
target-version = ['py311']

[tool.mypy]
python_version = "3.11"
